--- a/project_when2sleep/package.json
+++ b/project_when2sleep/package.json
@@ -14,7 +14,10 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "cors": "^2.8.5",
     "jwt-decode": "^4.0.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0"
